--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.9.3",
     "@reduxjs/toolkit": "^1.8.3",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "firebase": "^9.9.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
